--- a/partials/phone-detail.html
+++ b/partials/phone-detail.html
@@ -9,7 +9,7 @@
     </div>
 
     </div>
-    <div>
+    <div class="detail">
 <img ng-src="{{phone.images[0]}}" class="phone">
 
 <h1>{{phone.name}}</h1>
