--- a/partials/phone-list.html
+++ b/partials/phone-list.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     <div class="page-header">
         <h1>Epistolarium Graeco-Latinum</h1>
         <h2>Late Medieval Letters</h2>
